[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scene/MenuPrincipale/MenuPrincipale.gd" type="Script" id=1]
[ext_resource path="res://Scene/Opzioni/Opzioni.tscn" type="PackedScene" id=2]
[ext_resource path="res://Immagini/Main/arrow.png" type="Texture" id=3]
[ext_resource path="res://Fonts/PTSerif-Italic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scene/MenuPrincipale/NewCharacter.gd" type="Script" id=5]
[ext_resource path="res://Scene/Opzioni/BottoneDifficolt√†.tscn" type="PackedScene" id=6]
[ext_resource path="res://Immagini/Main/MainIm.png" type="Texture" id=7]
[ext_resource path="res://Audio/MusicaMappe.mp3" type="AudioStream" id=8]
[ext_resource path="res://Immagini/Main/TitoloVF.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.0705882, 0.0509804, 0.0509804, 0.717647 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=14]

[sub_resource type="Theme" id=13]

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=17]

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 4 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_editor_description_": ""
}

[node name="MainIm" type="Sprite" parent="."]
scale = Vector2( 1.045, 1 )
texture = ExtResource( 7 )
centered = false

[node name="Popup" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -0.5
margin_top = -0.5
margin_right = 0.5
margin_bottom = 0.5

[node name="Panel" type="Panel" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.0
margin_top = -141.0
margin_right = 201.0
margin_bottom = 141.0
custom_styles/panel = SubResource( 16 )

[node name="Opzioni" parent="Popup" instance=ExtResource( 2 )]
margin_top = -128.5
margin_bottom = 128.5

[node name="TitoloVf" type="Sprite" parent="."]
position = Vector2( 122, 6 )
scale = Vector2( 0.750926, 0.96875 )
texture = ExtResource( 9 )
centered = false

[node name="MainMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel2" type="Panel" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 427.5
margin_top = 196.0
margin_right = 556.5
margin_bottom = 364.0
custom_styles/panel = SubResource( 16 )

[node name="MainMenu" type="VBoxContainer" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 451.0
margin_top = 219.0
margin_right = 537.0
margin_bottom = 343.0

[node name="New" type="Button" parent="MainMenu/MainMenu"]
margin_right = 86.0
margin_bottom = 28.0
focus_neighbour_top = NodePath(".")
focus_next = NodePath("../Continue")
custom_fonts/font = SubResource( 4 )
text = "New Game"

[node name="Continue" type="Button" parent="MainMenu/MainMenu"]
margin_top = 32.0
margin_right = 86.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 5 )
text = "Continue"

[node name="Options" type="Button" parent="MainMenu/MainMenu"]
margin_top = 64.0
margin_right = 86.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 6 )
text = "Settings"

[node name="Quit" type="Button" parent="MainMenu/MainMenu"]
margin_top = 96.0
margin_right = 86.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 7 )
text = "Quit"

[node name="NewCharacter" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -63.0
margin_right = 97.0
margin_bottom = -26.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource( 5 )

[node name="Panel3" type="Panel" parent="NewCharacter"]
margin_left = -57.0
margin_top = -23.0
margin_right = 248.0
margin_bottom = 145.0
custom_styles/panel = SubResource( 16 )

[node name="Difficulty" parent="NewCharacter" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.5
margin_top = 56.0
margin_right = -6.5
margin_bottom = 96.0
focus_neighbour_top = NodePath("../HBoxContainer")
theme = SubResource( 14 )

[node name="HBoxContainer" type="HBoxContainer" parent="NewCharacter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -18.5
margin_right = 126.0
margin_bottom = 18.5
grow_horizontal = 2
focus_neighbour_bottom = NodePath("../Difficulty")
theme = SubResource( 13 )
alignment = 1

[node name="Label" type="Label" parent="NewCharacter/HBoxContainer"]
margin_right = 56.0
margin_bottom = 37.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 8 )
text = "Name:"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="NewCharacter/HBoxContainer"]
margin_left = 60.0
margin_right = 185.0
margin_bottom = 37.0
focus_neighbour_right = NodePath("../Done")
focus_neighbour_bottom = NodePath("../Done")
focus_next = NodePath("../Done")
size_flags_horizontal = 3
custom_fonts/font = SubResource( 9 )
align = 1
max_length = 15

[node name="Done" type="Button" parent="NewCharacter/HBoxContainer"]
margin_left = 189.0
margin_right = 252.0
margin_bottom = 37.0
focus_neighbour_left = NodePath("../LineEdit")
focus_neighbour_top = NodePath("../LineEdit")
focus_previous = NodePath(".")
custom_fonts/font = SubResource( 10 )
text = "Done!"

[node name="Already" type="Label" parent="NewCharacter"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.5
margin_top = -44.0
margin_right = 84.5
margin_bottom = -22.0
custom_fonts/font = SubResource( 1 )
text = "Character already exists!"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="NewCharacter"]
wait_time = 2.0
one_shot = true

[node name="Empty" type="Label" parent="NewCharacter"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.5
margin_top = -50.0
margin_right = 99.5
margin_bottom = -28.0
custom_fonts/font = SubResource( 2 )
text = "What kind of a name is that?"

[node name="Continue" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel4" type="Panel" parent="Continue"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -162.0
margin_top = -127.5
margin_right = 162.0
margin_bottom = 127.5
custom_styles/panel = SubResource( 16 )

[node name="ScrollContainer" type="ScrollContainer" parent="Continue"]
anchor_left = 0.553
anchor_top = 0.5
anchor_right = 0.553
anchor_bottom = 0.5
margin_left = -198.272
margin_top = -115.0
margin_right = -38.272
margin_bottom = 117.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="Characters" type="VBoxContainer" parent="Continue/ScrollContainer"]
margin_right = 64.0
margin_bottom = 232.0
rect_min_size = Vector2( 64, 232 )

[node name="DeleteSaves" type="Button" parent="Continue"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 47.5
margin_top = -107.0
margin_right = 142.5
margin_bottom = -79.0
theme = SubResource( 17 )
custom_fonts/font = SubResource( 11 )
text = "Delete saves"

[node name="Apply" type="Button" parent="Continue"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 63.0
margin_top = -65.0
margin_right = 143.0
margin_bottom = -37.0
custom_fonts/font = SubResource( 15 )
text = "Apply"

[node name="BackButton" type="TextureButton" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -14.0
margin_top = -153.0
margin_right = 498.0
margin_bottom = 359.0
rect_scale = Vector2( 0.05, 0.05 )
texture_normal = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 8 )
volume_db = -16.0
autoplay = true

[connection signal="pressed" from="MainMenu/MainMenu/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="MainMenu/MainMenu/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="MainMenu/MainMenu/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MainMenu/MainMenu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="item_selected" from="NewCharacter/Difficulty/OptionButton" to="NewCharacter" method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="NewCharacter/HBoxContainer/Done" to="NewCharacter" method="_on_Done_pressed"]
[connection signal="timeout" from="NewCharacter/Timer" to="NewCharacter" method="_on_Timer_timeout"]
[connection signal="pressed" from="Continue/DeleteSaves" to="." method="_on_DeleteSaves_pressed"]
[connection signal="pressed" from="Continue/Apply" to="." method="_on_Apply_pressed"]
[connection signal="button_down" from="BackButton" to="." method="_on_BackButton_button_down"]

[editable path="NewCharacter/Difficulty"]
